 * Various help fixes.
 * @list and list() can now show only built-in or only local commands or
   functions. Suggested by Trelane@M*U*S*H. [MG]
 * Mortals can now use @search to find any objects they can examine.
   Suggested by Paige. [MG]
 * @function names can start with numbers again. Requested by Mercutio. [MG]
 * @include and @break now work when entered directly from a client. [MG]
   
Functions:
 * ibreak(), for breaking out of an iter() loop. [Rhost] [MG]
 * New stext() function and %$N sub, equivilent of #$ in @switch, switch*(),
   and reswitch*(), but can be used in nested switches/on user input. [MG]
 * New slev() function, returns the current nesting depth of switches. [MG]

Commands:
 * @grep now accepts /wild and /regexp switches, for wildcard/globbing and
   regular expression greps (a la wildgrep() and regrep()). Also /nocase
   for case-insensitive greps. Suggested by Paige. [MG]
   
Fixes:
 * @cpattr and @mvattr could break attribute trees. Reported by Sketch. [MG]
 * benchmark() calculated the average incorrectly. Reported by Cheetah. [DC]
 * "look <container>'s <object>" incorrectly stopped working in p1 when
   <object>'s desc was set "nearby". Reported by Yuriko@M*U*SH. [MG]

Version 1.8.4 patchlevel 1                                 Sep 05,  2010

Major Changes:
 * You can now do the equivilent of @command/add, @hook, @function and
   @attribute/access from alias.cnf and restrict.cnf, to add/configure
   commands, functions and standard attributes. Suggested by Paige. [MG]
 * Exits now use @alias for alternate names. The old style of
   including aliases directly in names is still supported, but
   depreciated in new construction. Suggested by [MG]. [SW]

Minor Changes:
 * @power now reports when you try and set a power which is already set (or
   clear one which isn't set), similar to @set. Suggested by Paige. [MG]
 * Sorting methods now take - as a prefix to sort type in order to sort
   in descending order. Suggested by Minion. [GM]